--- a/node/views/src/views/index.ejs
+++ b/node/views/src/views/index.ejs
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modelo</title>
 </head>
 <body>
-    <h1>Eu fui renderizado</h1>
+    <section class="container">
+        <h1>Olá, mundo!</h1>
+    </section>
+    
+    <script src="./assets/js/bundle.js"></script>
 </body>
 </html>
