--- a/node/views/src/views/index.ejs
+++ b/node/views/src/views/index.ejs
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo</title>
-</head>
-<body>
+<%= include('includes/head'); %>
+
     <section class="container">
         <h1>Olá, mundo!</h1>
     </section>
     
-    <script src="./assets/js/bundle.js"></script>
-</body>
-</html>
+<%= include('includes/footer') %>
